[package]
name = "basic-strategies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", optional = true }
engine-trait = {git = "https://github.com/unchessful-games/engine-trait"}
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"], optional = true }

[features]
server = ["engine-trait/server", "tokio", "axum"]

[[bin]]
name = "basic-strategies"
features = ["server", "dep:tokio", "dep:axum"]
